k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-ms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-ms
  template:
    metadata:
      labels:
        app: order-ms
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: order-ms
          image: 127214175530.dkr.ecr.ap-southeast-1.amazonaws.com/ms/order-service:latest
          ports:
            - containerPort: 6000
