k8s/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: microservices-ingress
    namespace: default
    annotations:
      # NGINX specific annotations
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      # CORS configuration
      nginx.ingress.kubernetes.io/enable-cors: "true"
      nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
      nginx.ingress.kubernetes.io/cors-allow-origin: "*"
  spec:
    ingressClassName: nginx

    rules:
      - host: microservice.iamalamin.xyz
        http:
          paths:
            # Auth Microservice
            - path: /api/auth
              pathType: Prefix
              backend:
                service:
                  name: auth-ms-service
                  port:
                    number: 4000 # ClusterIP service port (maps to container port 4000)

            # Product Microservice
            - path: /api/products
              pathType: Prefix
              backend:
                service:
                  name: product-ms-service
                  port:
                    number: 5000 # ClusterIP service port (maps to container port 5000)

            # Order Microservice
            - path: /api/orders
              pathType: Prefix
              backend:
                service:
                  name: order-ms-service
                  port:
                    number: 6000 # ClusterIP service port (maps to container port 6000)
